# lab-cloudhaskell

./: Custom.hs  SimpleLocalnet.hs  Test.hs  WorkStealing.hs  WorkStealingMain.hs  distributed-process-fixedmaster.cabal  getWorkingLabMachines.py  getWorkinngLabMachines.py  trialServer.py
